@@ -40,6 +40,9 @@ git-annex (6.20151219) UNRELEASED; urgency=medium
     This may break existing parsers of this json output, if there were any.
   * whereis --json: Make url list be included in machine-parseable form.
   * test: Added --keep-failures option.
+  * unused: Bug fix when a new file was added to the annex, and then
+    removed (but not git rmed). git still has the add staged in this case,
+    so the content should not be unused and was wrongly treated as such.
 
  -- Joey Hess <id@joeyh.name>  Sat, 19 Dec 2015 13:31:17 -0400
 
